--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -14,7 +14,7 @@
                     <div class="card-header">
                         <h3 class="text-center">Login</h3>
                     </div>
-                    <div class="card-body">
+                    <!-- <div class="card-body">
                         {% with messages = get_flashed_messages(with_categories=true) %}
                             {% if messages %}
                                 {% for category, message in messages %}
@@ -25,6 +25,7 @@
                                 {% endfor %}
                             {% endif %}
                         {% endwith %}
+                        </div> -->
                         <form method="POST" action="{{ url_for('login') }}">
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email address</label>
@@ -38,7 +39,6 @@
                                 <button type="submit" class="btn btn-primary">Login</button>
                             </div>
                         </form>
-                    </div>
                 </div>
             </div>
         </div>
