--- a/templates/admin/layout_admin/sidebar.html
+++ b/templates/admin/layout_admin/sidebar.html
@@ -9,15 +9,15 @@
                 Pages
             </li>
 
-            <li class="sidebar-item active">
+            <li class="sidebar-item ">
                 <a class="sidebar-link" href="index.html">
       <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Dashboard</span>
     </a>
             </li>
 
             <li class="sidebar-item">
-                <a class="sidebar-link" href="pages-profile.html">
-      <i class="align-middle" data-feather="user"></i> <span class="align-middle">Profile</span>
+                <a class="sidebar-link" href="{{ url_for('articles') }}">
+      <i class="align-middle" data-feather="user"></i> <span class="align-middle">Artikel</span>
     </a>
             </li>
 
