--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -10,22 +10,13 @@
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <div class="card">
+                <div class="card p-2">
                     <div class="card-header">
                         <h3 class="text-center">Login</h3>
                     </div>
-                    <!-- <div class="card-body">
-                        {% with messages = get_flashed_messages(with_categories=true) %}
-                            {% if messages %}
-                                {% for category, message in messages %}
-                                    <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                                        {{ message }}
-                                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                                    </div>
-                                {% endfor %}
-                            {% endif %}
-                        {% endwith %}
-                        </div> -->
+                    <div class="card-body">
+                        {% include 'layout/alert.html' %}
+
                         <form method="POST" action="{{ url_for('login') }}">
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email address</label>
@@ -39,6 +30,7 @@
                                 <button type="submit" class="btn btn-primary">Login</button>
                             </div>
                         </form>
+                    </div>
                 </div>
             </div>
         </div>
