--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,1 @@
-{% extends('layout/app.html')%}
-
-{% block head %}
-<title>Home</title>
-{% endblock %}
-
-{% block content %}
-
-<div class="container">
-    <h1>Virtual Assistant</h1>
-
-</div>
-
-{% endblock %}
-
+<h1>rumah</h1>
