Introducing landing page

--- a/static/src/output.css
+++ b/static/src/output.css
@@ -1116,3 +1116,16 @@ video {
     }
   }
 }
+
+.custom-shape-divider-top {
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  margin-top: -1px;
+}
+.custom-shape-divider-top svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 90px;
+}
