--- a/templates/article.html
+++ b/templates/article.html
@@ -1,1 +1,96 @@
-<h1>Artikel</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{url_for('static',filename='dist/css/output.css')}}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@300;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,300;1,500&display=swap" rel="stylesheet">
+    <title>Divistant - Sahabat Virtual untuk Hidup Lebih Sehat</title>
+</head>
+<body class="">
+
+
+    <div class="text-center bg-blue-900">
+
+    <img src="{{url_for('static', filename='/img/Logo1.png')}}" alt="Logo Divistant" class=" bg-blue-900 mx-auto" style="width: 200px;">
+
+    <h5 class="font-bold text-center text-white font-sans">Divistant, Sahabat Virtual untuk Hidup Lebih Sehat Bersama Diabetes.</h5>
+    </div>
+
+    <section class="bg-blue-100 dark:bg-blue-900 py-8 sm:py-20 ">
+
+        <div class="container mx-auto r">
+
+            <header class=" text-center ">
+
+                <h2 class="text-5xl  font-bold pb-20 text-white">HALO DIVIS<span class="text-[#232947] border rounded-full p-2 bg-white">TER!</span>
+                </h2>
+                
+                <p class="mt-4 mx-auto max-w-2xl text-lg sm:text-base font-sans text-white">
+            Selamat datang di Divistant! Kami adalah asisten virtual yang siap membantu Anda dalam menjaga kesehatan diabetes. Dengan berbagai informasi terpercaya dan fitur interaktif, Divistant hadir untuk mendukung perjalanan Anda menuju hidup yang lebih sehat dan terkontrol.
+                </p>
+                
+            </header>
+        </div>
+    </section>
+      
+      <div class="bg-white dark:bg-gray-800">
+
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none" class="bg-white">
+
+        <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class=" bg-white dark:fill-blue-900">
+        </path>
+
+        </svg>
+
+        <h3 class="text-3xl font-bold text-center border bg-white">ARTIKEL</h3>
+      </div>
+
+
+
+      
+      
+      <!-- <section class="bg-white py-12 sm:py-20">
+        <div class="container mx-auto px-4 bg-white">
+            <img src="{{url_for('static', filename='/img/cek.jpg')}}" alt="Logo Divistant" class="mx-auto border border-blue-950 rounded-lg  " style="width: 700px;">
+          <h2 class="text-2xl sm:text-3xl font-bold text-center mb-4 sm:mb-8 dark:text-white">Section 2</h2>
+          <p class="text-center text-gray-700 dark:text-gray-300">This is the content of section 2.</p>
+        </div>
+      </section> -->
+      
+
+
+
+
+
+
+
+      <style>
+        .wave-divider {
+          position: relative;
+          top: 0;
+          left: 0;
+          width: 100%;
+          overflow: hidden;
+          line-height: 0;
+        }
+      
+        .wave-divider svg {
+          position: relative;
+          display: block;
+          width: calc(100% + 1.3px);
+          height: 60px;
+        }
+      
+        @media (min-width: 768px) {
+          .wave-divider svg {
+            height: 150px;
+          }
+        }
+      </style>
+
+
+</body>
+</html>
