--- a/templates/index.html
+++ b/templates/index.html
@@ -55,17 +55,18 @@
                 
                 <!-- Content Column -->
                 <div class="w-full md:w-1/2 flex flex-col items-start space-y-4 sm:space-y-6 ">
-                    <h2 class="text-2xl sm:text-3xl font-bold text-white">Article Updates</h2>
+                    <h2 class="text-2xl sm:text-3xl font-bold text-white">Seputar Artikel</h2>
                     <p class="text-white leading-relaxed text-sm sm:text-base lg:text-lg">
                         Temukan berbagai artikel dan berita terbaru seputar kesehatan diabetes di sini. Kami menyediakan konten yang informatif dan mudah dipahami agar Anda selalu ter-update dengan informasi dan panduan kesehatan terpercaya. Mulai dari tips pengelolaan diabetes, gaya hidup sehat, hingga teknologi terbaru dalam dunia kesehatan, semua bisa Anda temukan di sini.
                     </p>
-                    <button class="bg-white text-blue-900 px-4 sm:px-6 md:px-8 py-2 sm:py-3 rounded-full hover:bg-gray-400 hover:text-white transition-colors duration-200 inline-flex items-center">
+                    <a class="bg-white text-blue-900 px-4 sm:px-6 md:px-8 py-2 sm:py-3 rounded-full hover:bg-gray-400 hover:text-white transition-colors duration-200 inline-flex items-center" href="/artikel">
                         check it out! 
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-2" viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd" />
                         </svg>
-                    </button>
+                    </a>
                 </div>
+                
             </div>
         </div>
     </section>
