merubah tampilan index

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,7 @@
     <title>Divistant - Sahabat Virtual untuk Hidup Lebih Sehat</title>
 </head>
 <body >
-
-
+    
     <div class="text-center bg-blue-900 p-4 sm:p-6 md:p-10 lg:p-12">
         <img src="{{url_for('static', filename='/img/Logo1.png')}}" alt="Logo Divistant" class="bg-blue-900 mx-auto" style="width: 200px;">
         <h5 class="font-bold text-center text-white font-sans text-base sm:text-lg md:text-xl">Divistant, Sahabat Virtual untuk Hidup Lebih Sehat Bersama Diabetes.</h5>
@@ -141,7 +140,7 @@
                     
                     <div class="mt-8 text-center">
                     
-                        <a href="#" class="bg-indigo-600 hover:bg-indigo-700 text-white font-medium py-3 px-6 rounded-lg">Cek Rumah Sakit</a>
+                        <a href="/cek_rs" class="bg-indigo-600 hover:bg-indigo-700 text-white font-medium py-3 px-6 rounded-lg">Cek Rumah Sakit</a>
                     
                     </div>
                 
@@ -186,9 +185,6 @@
         
     
     </section>
-      
-    
-  
     <style>
         .wave-divider {
           position: relative;
