--- a/templates/index.html
+++ b/templates/index.html
@@ -180,6 +180,7 @@
                 
                 <!-- Teks copyright -->
                 <p class="text-gray-400 text-sm mt-1">&copy; 2024 Divistant owner</p>
+                <p>OUR TEAM</p>
             </div>
         </footer>
         
@@ -208,11 +209,5 @@
           }
         }
     </style>
-
-
-
-<div>
-    halo
-</div>
 </body>
 </html>
