create article section

--- a/templates/index.html
+++ b/templates/index.html
@@ -175,12 +175,11 @@
             <div class="max-w-md mx-auto text-center">
                 <!-- Logo atau ikon -->
                 <div class="flex justify-center mb-2">
-                    <img src="{{url_for('static', filename='/img/Footer_Logo.png')}}" class="w-12 h-12" style="width: 70;">
+                    <img src="{{url_for('static', filename='/img/Footer_Logo.png')}}" class="w-16 h-16" >
                 </div>
                 
                 <!-- Teks copyright -->
-                <p class="text-gray-400 text-sm mt-1">&copy; 2024 Divistant owner</p>
-                <p>OUR TEAM</p>
+                <p class="text-gray-400 text-sm mt-1">&copy; 2024 Divistant </p>
             </div>
         </footer>
         
