--- a/templates/article.html
+++ b/templates/article.html
@@ -3,93 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page Artikel</title>
     <link rel="stylesheet" href="{{url_for('static',filename='dist/css/output.css')}}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@300;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,300;1,500&display=swap" rel="stylesheet">
-    <title>Divistant - Sahabat Virtual untuk Hidup Lebih Sehat</title>
+    <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@300;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,300;1,500&display=swap" rel="stylesheet">
+    
 </head>
-<body class="">
+<body >
 
+  <!-- Hero Section -->
+  <section class="bg-blue-900">
+    <section class="max-w-6xl mx-auto p-4 md:p-8 mb-10 ">
+      <h1 class="text-white mx-10 mt-12 text-center font-extrabold text-4xl">
+        Baca artikel mengenai kesehatan anda di sini!
+      </h1>
 
-    <div class="text-center bg-blue-900">
-
-    <img src="{{url_for('static', filename='/img/Logo1.png')}}" alt="Logo Divistant" class=" bg-blue-900 mx-auto" style="width: 200px;">
-
-    <h5 class="font-bold text-center text-white font-sans">Divistant, Sahabat Virtual untuk Hidup Lebih Sehat Bersama Diabetes.</h5>
-    </div>
-
-    <section class="bg-blue-100 dark:bg-blue-900 py-8 sm:py-20 ">
-
-        <div class="container mx-auto r">
-
-            <header class=" text-center ">
-
-                <h2 class="text-5xl  font-bold pb-20 text-white">HALO DIVIS<span class="text-[#232947] border rounded-full p-2 bg-white">TER!</span>
-                </h2>
-                
-                <p class="mt-4 mx-auto max-w-2xl text-lg sm:text-base font-sans text-white">
-            Selamat datang di Divistant! Kami adalah asisten virtual yang siap membantu Anda dalam menjaga kesehatan diabetes. Dengan berbagai informasi terpercaya dan fitur interaktif, Divistant hadir untuk mendukung perjalanan Anda menuju hidup yang lebih sehat dan terkontrol.
-                </p>
-                
-            </header>
+        <div class="bg-white shadow-lg rounded-lg overflow-hidden flex flex-col md:flex-row mt-20">
+            <div class="md:w-1/2">
+                <img src="{{url_for('static', filename='/img/cek.jpg')}}" class="w-full h-full object-cover">
+            </div>
+            <div class="p-6 md:w-1/2">
+                <span class="text-blue-600 font-semibold text-sm">New!</span>
+                <h2 class="text-3xl font-bold mt-2">Unlocking Efficiency: The Power Of A Modern POS System</h2>
+                <p class="mt-4 mb-4 text-gray-600">In today's fast-paced business landscape, efficiency is key to success...</p>
+                <a href="#" >
+                  <button class="bg-blue-900 text-white px-4 sm:px-6 md:px-8 py-2 sm:py-3 rounded-full hover:bg-white hover:text-blue-800 transition-colors duration-500 inline-flex items-center font-sans">
+                    Baca Selengkapnya →
+                </button>
+                </a>
+            </div>
         </div>
     </section>
-      
-      <div class="bg-white dark:bg-gray-800">
-
-        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none" class="bg-white">
-
-        <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class=" bg-white dark:fill-blue-900">
-        </path>
-
-        </svg>
-
-        <h3 class="text-3xl font-bold text-center border bg-white">ARTIKEL</h3>
-      </div>
 
 
+    
+    <!-- Recent Articles Section -->
+    <div class="bg-white dark:bg-gray-800">
+      <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none" class="bg-white">
+          <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="bg-white dark:fill-blue-900">
+          </path>
+      </svg>
+  </div>
+ 
+    <section class="bg-white">
+    <section class="max-w-6xl mx-auto p-4 md:p-8 ">
+        <h2 class="text-2xl font-semibold mb-6">Our Recent Articles</h2>
+        <div class="grid gap-6 md:grid-cols-3">
+            <!-- Article Card 1 -->
+            <div class="bg-blue-900 hover:bg-blue-800 transition-colors duration-500 shadow-lg rounded-lg overflow-hidden">
+                <img src="{{url_for('static', filename='/img/cek.jpg')}}"  class="w-full h-48 object-cover">
+                <div class="p-6">
+                    <h3 class="text-xl font-semibold text-white">Beyond Transactions: Unlocking The Full Potential of Your POS System</h3>
+                    <p class="text-sm  mt-2 text-white">Sam Pitak | 20 Apr 2024</p>
+                    <p class="mt-4 text-white">In the realm of modern business operations, a Point of Sale...</p>
+                    <a href="#" class="text-blue-900 font-semibold mt-4 inline-block border bg-white rounded-full p-3 hover:text-white hover:bg-blue-900 transition-colors duration-500">Read More →</a>
+                </div>
+            </div>
 
-      
-      
-      <!-- <section class="bg-white py-12 sm:py-20">
-        <div class="container mx-auto px-4 bg-white">
-            <img src="{{url_for('static', filename='/img/cek.jpg')}}" alt="Logo Divistant" class="mx-auto border border-blue-950 rounded-lg  " style="width: 700px;">
-          <h2 class="text-2xl sm:text-3xl font-bold text-center mb-4 sm:mb-8 dark:text-white">Section 2</h2>
-          <p class="text-center text-gray-700 dark:text-gray-300">This is the content of section 2.</p>
+            <!-- Article Card 2 -->
+            <div class="bg-blue-900 hover:bg-blue-800 transition-colors duration-500 shadow-lg rounded-lg overflow-hidden">
+                <img src="{{url_for('static', filename='/img/cek.jpg')}}"  class="w-full h-48 object-cover">
+                <div class="p-6">
+                  <h3 class="text-xl font-semibold text-white">Beyond Transactions: Unlocking The Full Potential of Your POS System</h3>
+                  <p class="text-sm  mt-2 text-white">Sam Pitak | 20 Apr 2024</p>
+                  <p class="mt-4 text-white">In the realm of modern business operations, a Point of Sale...</p>
+                  <a href="#" class="text-blue-900 font-semibold mt-4 inline-block border bg-white rounded-full p-3 hover:text-white hover:bg-blue-900 transition-colors duration-500">Read More →</a>
+                </div>
+            </div>
+
+            <!-- Article Card 3 -->
+            <div class="bg-blue-900 hover:bg-blue-800 transition-colors duration-500 shadow-lg rounded-lg overflow-hidden">
+                <img src="{{url_for('static', filename='/img/cek.jpg')}}" class="w-full h-48 object-cover">
+                <div class="p-6">
+                  <h3 class="text-xl font-semibold text-white">Beyond Transactions: Unlocking The Full Potential of Your POS System</h3>
+                  <p class="text-sm  mt-2 text-white">Sam Pitak | 20 Apr 2024</p>
+                  <p class="mt-4 text-white">In the realm of modern business operations, a Point of Sale...</p>
+                  <a href="#" class="text-blue-900 font-semibold mt-4 inline-block border bg-white rounded-full p-3 hover:text-white hover:bg-blue-900 transition-colors duration-500">Read More →</a>
+                </div>
+            </div>
         </div>
-      </section> -->
-      
+      </section>
+    </section>
 
+    <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#ffffff" fill-opacity="1" d="M0,224L40,240C80,256,160,288,240,288C320,288,400,256,480,240C560,224,640,224,720,229.3C800,235,880,245,960,256C1040,267,1120,277,1200,256C1280,235,1360,181,1400,154.7L1440,128L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path>
+    </svg>
+  
+  <footer class="bg-blue-900 py-8">
+      <div class="max-w-md mx-auto text-center">
+          <!-- Logo atau ikon -->
+          <div class="flex justify-center mb-2">
+              <img src="{{url_for('static', filename='/img/Footer_Logo.png')}}" class="w-16 h-16" >
+          </div>
+          
+          <!-- Teks copyright -->
+          <p class="text-gray-400 text-sm mt-1">&copy; 2024 Divistant</p>
+      </div>
+  </footer>
+  </section>
 
+  
 
-
-
-
-
-      <style>
-        .wave-divider {
-          position: relative;
-          top: 0;
-          left: 0;
-          width: 100%;
-          overflow: hidden;
-          line-height: 0;
-        }
-      
-        .wave-divider svg {
-          position: relative;
-          display: block;
-          width: calc(100% + 1.3px);
-          height: 60px;
-        }
-      
-        @media (min-width: 768px) {
-          .wave-divider svg {
-            height: 150px;
-          }
-        }
-      </style>
 
 
 </body>
