menambahkan rumah sakit

--- a/templates/admin/layout_admin/sidebar.html
+++ b/templates/admin/layout_admin/sidebar.html
@@ -22,14 +22,8 @@
             </li>
 
             <li class="sidebar-item">
-                <a class="sidebar-link" href="pages-sign-in.html">
-      <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Sign In</span>
-    </a>
-            </li>
-
-            <li class="sidebar-item">
-                <a class="sidebar-link" href="pages-blank.html">
-      <i class="align-middle" data-feather="book"></i> <span class="align-middle">Blank</span>
+                <a class="sidebar-link" href="/admin/rumah_sakit">
+      <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Rumah Sakit</span>
     </a>
             </li>
         </ul>
