--- a/templates/admin/app.html
+++ b/templates/admin/app.html
@@ -19,6 +19,8 @@
 
 	<link href="{{ url_for('static', filename='adminkit/css/app.css') }}" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css">
+
     {% endblock %}
 </head>
 
@@ -29,6 +31,15 @@
     {% endblock %}
 
 	<script src="{{ url_for('static', filename='adminkit/js/app.js') }}"></script>
+	 <!-- jQuery -->
+	 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	 <!-- Bootstrap JS -->
+	 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	 <!-- DataTables JS -->
+	 <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
+	 <script src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
+	 <!-- Inisialisasi DataTables di halaman yang menggunakannya -->
+	 {% block scripts %}{% endblock %}
 </body>
 
 </html>
