--- a/templates/layout/app.html
+++ b/templates/layout/app.html
@@ -9,8 +9,7 @@
     {% endblock %}
 </head>
 <body>
-    {% include "layout/navbar.html" %}
+    {% include 'layout/alert.html' %}
     {% block content %}{% endblock %}
-    {% include "layout/footer.html" %}
 </body>
 </html>
