--- a/templates/article.html
+++ b/templates/article.html
@@ -80,7 +80,7 @@
         {% endfor %}
       </div>
       <div class="flex justify-center mt-8">
-        {% if articles|length >= 9 %}  {# Tampilkan tombol hanya jika ada 9 atau lebih artikel #}
+        {% if articles|length >= 9 %}  
           <button id="load-more-btn" class="bg-blue-900 text-white py-2 px-4 rounded-lg hover:bg-blue-800 transition-colors duration-300">
             Temukan Artikel Lainnya
           </button>
